--- a/hello_okx.ipynb
+++ b/hello_okx.ipynb
@@ -11,38 +11,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'httpx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[6], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mokx\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mMarketData\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mMarketData\u001B[39;00m\n\u001B[1;32m      2\u001B[0m flag \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m1\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;66;03m# live trading:0 , demo trading: 1\u001B[39;00m\n\u001B[1;32m      3\u001B[0m marketDataAPI \u001B[38;5;241m=\u001B[39m MarketData\u001B[38;5;241m.\u001B[39mMarketAPI (flag\u001B[38;5;241m=\u001B[39mflag)\n",
-      "File \u001B[0;32m~/opt/miniconda3/envs/quants/lib/python3.8/site-packages/okx/MarketData.py:1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mclient\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Client\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconsts\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;241m*\u001B[39m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mMarketAPI\u001B[39;00m(Client):\n",
-      "File \u001B[0;32m~/opt/miniconda3/envs/quants/lib/python3.8/site-packages/okx/client.py:3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mjson\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mhttpx\u001B[39;00m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m consts \u001B[38;5;28;01mas\u001B[39;00m c, utils, exceptions\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mClient\u001B[39;00m(\u001B[38;5;28mobject\u001B[39m):\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'httpx'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import okx.MarketData as MarketData\n",
     "flag = \"1\" # live trading:0 , demo trading: 1\n",
     "marketDataAPI = MarketData.MarketAPI (flag=flag)\n",
     "result = marketDataAPI.get_tickers(instType=\"SPOT\")\n",
     "print(result)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-06T19:31:30.399866Z",
+     "end_time": "2023-04-06T19:31:31.287495Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "2. 阅读我们可用的交易对"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import okx.PublicData as PublicData\n",
+    "if __name__ == 'main':\n",
+    "    flag = \"1\"\n",
+    "    publicDataAPI = PublicData.PublicAPI (flag=flag)\n",
+    "    result = publicDataAPI.get_instruments (\n",
+    "        instType = \"SPOT\"\n",
+    "        )\n",
+    "    print(result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "3. 读取您的帐户余额"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import okx.Account as Account\n",
+    "flag = \"1\"\n",
+    "api_key = \"061c56b3-XXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "secret_key = \"1809XXXXXXXXXXXXXXXXXXXX\"\n",
+    "IP = \"\"\n",
+    "passphrase = \"veXXXXXXXXXXXX\"\n",
+    "Permissions = \"Read/Trade\"\n",
+    "# live trading:0 , demo trading: 1\n",
+    "accountAPI = Account.AccountAPI(api_key, secret_key, passphrase, False, flag)\n",
+    "result = accountAPI.get_account_balance()\n",
+    "print (result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "4. 读取您的帐户余额"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import okx.Account as Account\n",
+    "flag = \"1\"\n",
+    "api_key = \"061c56b3-XXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "secret_key = \"1809XXXXXXXXXXXXXXXXXXXX\"\n",
+    "IP = \"\"\n",
+    "passphrase = \"veXXXXXXXXXXXX\"\n",
+    "Permissions = \"Read/Trade\"\n",
+    "# live trading:0 , demo trading: 1\n",
+    "accountAPI = Account.AccountAPI(api_key, secret_key, passphrase, False, flag)\n",
+    "result = accountAPI.get_account_balance()\n",
+    "print (result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "5. 确定您的当前帐户配置为哪种模式\n",
+    "在我们的统一帐户系统中，有四种帐户模式：\n",
+    "+ 简单帐户\n",
+    "+ 单一货币保证金账户\n",
+    "+ 多币种保证金账户\n",
+    "+ 投资组合保证金账户"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import okx.Account as Account\n",
+    "flag = \"1\"\n",
+    "api_key = \"061c56b3-XXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "secret_key = \"1809XXXXXXXXXXXXXXXXXXXX\"\n",
+    "IP = \"\"\n",
+    "passphrase = \"veXXXXXXXXXXXX\"\n",
+    "Permissions = \"Read/Trade\"\n",
+    "accountAPI = Account.AccountAPI (api_key, secret_key, passphrase, False, flag)\n",
+    "result = accountAPI.get_account_config()\n",
+    "print (result)\n",
+    "if result ['code'] == \"0\":\n",
+    "    acctLv = result[\"data\"][0][\"acctLv\"]\n",
+    "if acctLv == \"1\":\n",
+    "    print (\"Simple mode\")\n",
+    "elif acctLv == \"2\":\n",
+    "    print(\"Single-currency margin mode\")\n",
+    "elif acctLv == \"3\":\n",
+    "    print(\"Multi-currency margin mode\")\n",
+    "elif acctLv == \"4\":\n",
+    "    print(\"Portfolio margin mode\")"
+   ],
    "metadata": {
     "collapsed": false
    }
