--- a/test_api.ipynb
+++ b/test_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,10 @@
      "output_type": "stream",
      "text": [
       "body:  \n",
-      "header:  {'Content-Type': 'application/json', 'OK-ACCESS-KEY': '8da5d3ad-7554-424e-a1c2-bfcead40dcdd', 'OK-ACCESS-SIGN': b'DM2iElmmKcBpS8AdL+XWy8QEBThKVnesXYP5miQiw14=', 'OK-ACCESS-TIMESTAMP': '2023-04-13T10:57:33.644Z', 'OK-ACCESS-PASSPHRASE': 'lxc123@LXC', 'x-simulated-trading': '1'}\n",
+      "header:  {'Content-Type': 'application/json', 'OK-ACCESS-KEY': '8da5d3ad-7554-424e-a1c2-bfcead40dcdd', 'OK-ACCESS-SIGN': b'/iPQ0x5kiH3UCZRc2js7xjKqqrr28dOjLbS1ZDfjdtU=', 'OK-ACCESS-TIMESTAMP': '2023-04-13T14:25:05.242Z', 'OK-ACCESS-PASSPHRASE': 'lxc123@LXC', 'x-simulated-trading': '1'}\n",
       "domain: https://www.okx.com\n",
-      "url: /api/v5/account/balance\n"
+      "url: /api/v5/account/balance\n",
+      "{'code': '0', 'data': [{'adjEq': '', 'details': [{'availBal': '3', 'availEq': '', 'cashBal': '3', 'ccy': 'BTC', 'crossLiab': '', 'disEq': '90778.5', 'eq': '3', 'eqUsd': '90778.5', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1681395489148', 'upl': '', 'uplLiab': ''}, {'availBal': '15', 'availEq': '', 'cashBal': '15', 'ccy': 'ETH', 'crossLiab': '', 'disEq': '29957.7', 'eq': '15', 'eqUsd': '29957.7', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565815', 'upl': '', 'uplLiab': ''}, {'availBal': '300', 'availEq': '', 'cashBal': '300', 'ccy': 'OKB', 'crossLiab': '', 'disEq': '11510.910000000002', 'eq': '300', 'eqUsd': '12789.900000000001', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565728', 'upl': '', 'uplLiab': ''}, {'availBal': '300', 'availEq': '', 'cashBal': '300', 'ccy': 'JFI', 'crossLiab': '', 'disEq': '0', 'eq': '300', 'eqUsd': '10276.393680000001', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565758', 'upl': '', 'uplLiab': ''}, {'availBal': '1500', 'availEq': '', 'cashBal': '1500', 'ccy': 'UNI', 'crossLiab': '', 'disEq': '7871.849999999999', 'eq': '1500', 'eqUsd': '9261', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565787', 'upl': '', 'uplLiab': ''}, {'availBal': '9000', 'availEq': '', 'cashBal': '9000', 'ccy': 'USDT', 'crossLiab': '', 'disEq': '9006.39', 'eq': '9000', 'eqUsd': '9006.39', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1681395489134', 'upl': '', 'uplLiab': ''}, {'availBal': '9000', 'availEq': '', 'cashBal': '9000', 'ccy': 'TUSD', 'crossLiab': '', 'disEq': '9000', 'eq': '9000', 'eqUsd': '9000', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565801', 'upl': '', 'uplLiab': ''}, {'availBal': '9000', 'availEq': '', 'cashBal': '9000', 'ccy': 'USDK', 'crossLiab': '', 'disEq': '9000', 'eq': '9000', 'eqUsd': '9000', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565699', 'upl': '', 'uplLiab': ''}, {'availBal': '9000', 'availEq': '', 'cashBal': '9000', 'ccy': 'USDC', 'crossLiab': '', 'disEq': '8366.652', 'eq': '9000', 'eqUsd': '8996.4', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565843', 'upl': '', 'uplLiab': ''}, {'availBal': '9000', 'availEq': '', 'cashBal': '9000', 'ccy': 'PAX', 'crossLiab': '', 'disEq': '8937.9', 'eq': '9000', 'eqUsd': '8937.9', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565713', 'upl': '', 'uplLiab': ''}, {'availBal': '30', 'availEq': '', 'cashBal': '30', 'ccy': 'LTC', 'crossLiab': '', 'disEq': '2675.01', 'eq': '30', 'eqUsd': '2815.8', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565829', 'upl': '', 'uplLiab': ''}, {'availBal': '30000', 'availEq': '', 'cashBal': '30000', 'ccy': 'TRX', 'crossLiab': '', 'disEq': '1657.5', 'eq': '30000', 'eqUsd': '1950', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565856', 'upl': '', 'uplLiab': ''}, {'availBal': '3000', 'availEq': '', 'cashBal': '3000', 'ccy': 'ADA', 'crossLiab': '', 'disEq': '1112.967', 'eq': '3000', 'eqUsd': '1236.63', 'fixedBal': '0', 'frozenBal': '0', 'interest': '', 'isoEq': '', 'isoLiab': '', 'isoUpl': '', 'liab': '', 'maxLoan': '', 'mgnRatio': '', 'notionalLever': '', 'ordFrozen': '0', 'spotInUseAmt': '', 'stgyEq': '0', 'twap': '0', 'uTime': '1680778565869', 'upl': '', 'uplLiab': ''}], 'imr': '', 'isoEq': '', 'mgnRatio': '', 'mmr': '', 'notionalUsd': '', 'ordFroz': '', 'totalEq': '204006.61368', 'uTime': '1681395912065'}], 'msg': ''}\n"
      ]
     }
    ],
@@ -29,7 +30,7 @@
     "Permissions = \"Read/Withdraw/Trade\"\n",
     "accountAPI = Account.AccountAPI(api_key, secret_key, passphrase, False, flag)\n",
     "result = accountAPI.get_account_balance()\n",
-    "# print (result)\n"
+    "print (result)\n"
    ]
   },
   {
@@ -107,30 +108,29 @@
      "output_type": "stream",
      "text": [
       "body:  \n",
-      "header:  {'Content-Type': 'application/json', 'OK-ACCESS-KEY': '8da5d3ad-7554-424e-a1c2-bfcead40dcdd', 'OK-ACCESS-SIGN': b'J1asv1ykBjSi4f00xFQEpW3WEXH4a/eiENsfMx+sGzo=', 'OK-ACCESS-TIMESTAMP': '2023-04-13T10:57:35.648Z', 'OK-ACCESS-PASSPHRASE': 'lxc123@LXC', 'x-simulated-trading': '1'}\n",
+      "header:  {'Content-Type': 'application/json', 'OK-ACCESS-KEY': '8da5d3ad-7554-424e-a1c2-bfcead40dcdd', 'OK-ACCESS-SIGN': b'1jG9V2igIZ4WS2QkOgwxClJ0yPKxpVnraPZCOpg6gs4=', 'OK-ACCESS-TIMESTAMP': '2023-04-13T14:19:38.126Z', 'OK-ACCESS-PASSPHRASE': 'lxc123@LXC', 'x-simulated-trading': '0'}\n",
       "domain: https://www.okx.com\n",
       "url: /api/v5/account/balance\n",
-      "BTC 3 3\n",
-      "ETH 15 15\n",
-      "OKB 300 300\n",
-      "JFI 300 300\n",
-      "UNI 1500 1500\n",
-      "USDT 9000 9000\n",
-      "TUSD 9000 9000\n",
-      "USDK 9000 9000\n",
-      "USDC 9000 9000\n",
-      "PAX 9000 9000\n",
-      "LTC 30 30\n",
-      "TRX 30000 30000\n",
-      "ADA 3000 3000\n"
+      "{\"msg\":\"APIKey does not match current environment.\",\"code\":\"50101\"}, 401\n"
+     ]
+    },
+    {
+     "ename": "OkxAPIException",
+     "evalue": "API Request Error(code=50101): APIKey does not match current environment.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOkxAPIException\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32md:\\lianghua\\ok\\quants\\test_api.ipynb 单元格 4\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/lianghua/ok/quants/test_api.ipynb#W3sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m accountAPI \u001b[39m=\u001b[39m Account\u001b[39m.\u001b[39mAccountAPI(api_key, secret_key, passphrase, \u001b[39mFalse\u001b[39;00m,\u001b[39m'\u001b[39m\u001b[39m0\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/lianghua/ok/quants/test_api.ipynb#W3sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# result = accountAPI.get_account_config()\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/lianghua/ok/quants/test_api.ipynb#W3sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m result\u001b[39m=\u001b[39maccountAPI\u001b[39m.\u001b[39;49mget_account_balance()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/lianghua/ok/quants/test_api.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m result[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/lianghua/ok/quants/test_api.ipynb#W3sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mfor\u001b[39;00m detail \u001b[39min\u001b[39;00m item[\u001b[39m'\u001b[39m\u001b[39mdetails\u001b[39m\u001b[39m'\u001b[39m]:\n",
+      "File \u001b[1;32mc:\\Users\\11648\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\okx\\Account.py:23\u001b[0m, in \u001b[0;36mAccountAPI.get_account_balance\u001b[1;34m(self, ccy)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[39mif\u001b[39;00m ccy:\n\u001b[0;32m     22\u001b[0m     params[\u001b[39m'\u001b[39m\u001b[39mccy\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m ccy\n\u001b[1;32m---> 23\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_request_with_params(GET, ACCOUNT_INFO, params)\n",
+      "File \u001b[1;32mc:\\Users\\11648\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\okx\\client.py:49\u001b[0m, in \u001b[0;36mClient._request_with_params\u001b[1;34m(self, method, request_path, params)\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_request_with_params\u001b[39m(\u001b[39mself\u001b[39m, method, request_path, params):\n\u001b[1;32m---> 49\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_request(method, request_path, params)\n",
+      "File \u001b[1;32mc:\\Users\\11648\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\okx\\client.py:42\u001b[0m, in \u001b[0;36mClient._request\u001b[1;34m(self, method, request_path, params)\u001b[0m\n\u001b[0;32m     40\u001b[0m     response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclient\u001b[39m.\u001b[39mpost(request_path, data\u001b[39m=\u001b[39mbody, headers\u001b[39m=\u001b[39mheader)\n\u001b[0;32m     41\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mstr\u001b[39m(response\u001b[39m.\u001b[39mstatus_code)\u001b[39m.\u001b[39mstartswith(\u001b[39m'\u001b[39m\u001b[39m2\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m---> 42\u001b[0m     \u001b[39mraise\u001b[39;00m exceptions\u001b[39m.\u001b[39mOkxAPIException(response)\n\u001b[0;32m     43\u001b[0m \u001b[39mreturn\u001b[39;00m response\u001b[39m.\u001b[39mjson()\n",
+      "\u001b[1;31mOkxAPIException\u001b[0m: API Request Error(code=50101): APIKey does not match current environment."
      ]
     }
    ],
    "source": [
     "import okx.Account as Account\n",
-    "\n",
-    "\n",
-    "\n",
     "flag = \"1\"\n",
     "api_key = \"8da5d3ad-7554-424e-a1c2-bfcead40dcdd\"\n",
     "secret_key = \"E086EDAC65DF1E55DA72CA2483327CA2\"\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,10 +156,10 @@
      "output_type": "stream",
      "text": [
       "body:  \n",
-      "header:  {'Content-Type': 'application/json', 'OK-ACCESS-KEY': '8da5d3ad-7554-424e-a1c2-bfcead40dcdd', 'OK-ACCESS-SIGN': b'2nLzMSOgLqoIQeJWFAG61d9rdijg7en/ZMfKCBzYagQ=', 'OK-ACCESS-TIMESTAMP': '2023-04-13T10:57:36.113Z', 'OK-ACCESS-PASSPHRASE': 'lxc123@LXC', 'x-simulated-trading': '1'}\n",
+      "header:  {'Content-Type': 'application/json', 'OK-ACCESS-KEY': '8da5d3ad-7554-424e-a1c2-bfcead40dcdd', 'OK-ACCESS-SIGN': b'7tjQHmmDFG7ZbKwih1ynzHMM0Lxn7Eyk4Nqb8a3E4Mg=', 'OK-ACCESS-TIMESTAMP': '2023-04-13T14:28:31.019Z', 'OK-ACCESS-PASSPHRASE': 'lxc123@LXC', 'x-simulated-trading': '1'}\n",
       "domain: https://www.okx.com\n",
-      "url: /api/v5/asset/deposit-history\n",
-      "{'code': '0', 'data': [], 'msg': ''}\n"
+      "url: /api/v5/asset/balances?ccy=USDT\n",
+      "{'code': '0', 'data': [{'availBal': '0', 'bal': '0', 'ccy': 'USDT', 'frozenBal': '0'}], 'msg': ''}\n"
      ]
     }
    ],
@@ -174,7 +174,9 @@
     "Permissions = \"Read/Withdraw/Trade\"\n",
     "\n",
     "fundingAPI=Funding.FundingAPI(api_key, secret_key, passphrase, False, flag)\n",
-    "result=fundingAPI.get_deposit_history()\n",
+    "# result=fundingAPI.get_deposit_history()\n",
+    "# print(result)\n",
+    "result=fundingAPI.get_balances(ccy='USDT')\n",
     "print(result)"
    ]
   },
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +366,7 @@
      "output_type": "stream",
      "text": [
       "body:  {\"instId\": \"BTC-USDT\", \"tdMode\": \"cash\", \"side\": \"sell\", \"ordType\": \"market\", \"sz\": \"2\", \"ccy\": \"\", \"clOrdId\": \"\", \"tag\": \"\", \"posSide\": \"\", \"px\": \"\", \"reduceOnly\": \"\", \"tgtCcy\": \"\"}\n",
-      "header:  {'Content-Type': 'application/json', 'OK-ACCESS-KEY': '8da5d3ad-7554-424e-a1c2-bfcead40dcdd', 'OK-ACCESS-SIGN': b'D2tBw9OhJJgdzge8IwLGn746PJ+vTHJ1QHxRPlRXY3M=', 'OK-ACCESS-TIMESTAMP': '2023-04-13T11:16:19.984Z', 'OK-ACCESS-PASSPHRASE': 'lxc123@LXC', 'x-simulated-trading': '1'}\n",
+      "header:  {'Content-Type': 'application/json', 'OK-ACCESS-KEY': '8da5d3ad-7554-424e-a1c2-bfcead40dcdd', 'OK-ACCESS-SIGN': b'oPsKMCjMvNvVeKYf/pCZsveTl5KynexxHuF7NZiVdIs=', 'OK-ACCESS-TIMESTAMP': '2023-04-13T13:59:53.848Z', 'OK-ACCESS-PASSPHRASE': 'lxc123@LXC', 'x-simulated-trading': '1'}\n",
       "domain: https://www.okx.com\n",
       "url: /api/v5/trade/order\n",
       "{'code': '1', 'data': [{'clOrdId': '', 'ordId': '', 'sCode': '51008', 'sMsg': 'Order failed. Insufficient BTC balance in account. ', 'tag': ''}], 'msg': 'All operations failed'}\n"
@@ -385,6 +387,15 @@
     "\n",
     "result=tradeAPI.place_order(instId='BTC-USDT',tdMode='cash',side='sell',ordType='market',sz='2')\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import okx.Funding as Funding\n"
    ]
   }
  ],
